--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -365,6 +365,12 @@ footer {
     text-align: center;
   }
 }
+.navbar {
+    height: 100vh;        /* toute la hauteur de l’écran */
+    overflow-y: auto;     /* active le scroll vertical */
+    overflow-x: hidden;   /* pas de scroll horizontal */
+}
+
         
         </style>
         {% endblock %}
@@ -414,6 +420,10 @@ footer {
         <br>
         <br>
           <a href="{{ path('app_cours_index') }}">📖Cours</a>
+        <br>
+        <br>
+        
+          <a href="{{ path('app_inscriptions_index') }}">📄Inscriptions</a>
         <br>
         {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION') %}
           <br>
