--- a/templates/compte/index.html.twig
+++ b/templates/compte/index.html.twig
@@ -68,7 +68,7 @@
     {% endif %}
 
     
-        <a href="{{ path('app_accueil') }}">back to index</a>
+        <a href="{{ path('app_accueil') }}">Retour à la page d'accueil</a>
         <br>
        <a href="{{ path('app_logout') }}" class="btn btn-lg btn-danger">
         Se déconnecter
