--- a/templates/inscriptions/index.html.twig
+++ b/templates/inscriptions/index.html.twig
@@ -1,35 +1,75 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscriptions index{% endblock %}
+{% block title %}Inscriptions{% endblock %}
 
 {% block body %}
-    <h1>Inscriptions index</h1>
+    <h1>Inscriptions</h1>
+
+    {% for message in app.flashes('success') %}
+        <div style="background-color: #d4edda; color: #155724; padding: 1rem; border-radius: var(--radius); margin-bottom: 1rem;">
+            {{ message }}
+        </div>
+    {% endfor %}
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Nombre_paiments</th>
-                <th>actions</th>
+                <th>Élève</th>
+                <th>Cours</th>
+                <th>Professeur</th>
+                <th>Nombre de paiements</th>
+                <th>Date d'inscription</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for inscription in inscriptions %}
             <tr>
-                <td>{{ inscription.id }}</td>
+                <td>
+                    <a href="{{ path('app_eleves_show', {'id': inscription.eleves.id}) }}" style="color: #3b5bdb; text-decoration: underline; cursor: pointer;">
+                        {{ inscription.eleves.nom }} {{ inscription.eleves.prenom }}
+                    </a><br>
+                   
+                </td>
+                <td>
+                    <a href="{{ path('app_cours_show', {'id': inscription.cours.id}) }}" style="color: #3b5bdb; text-decoration: underline; cursor: pointer;">
+                        {{ inscription.cours.libelle }}
+                    </a><br>
+                </td>
+                <td>
+                    {% if inscription.cours.professeur %}
+                        <a href="{{ path('app_professeur_show', {'id': inscription.cours.professeur.id}) }}" style="color: #3b5bdb; text-decoration: underline; cursor: pointer;">
+                            {{ inscription.cours.professeur.nom }} {{ inscription.cours.professeur.prenom }}
+                        </a>
+                    {% else %}
+                        <span style="color: #6c757d;">Non assigné</span>
+                    {% endif %}
+                </td>
                 <td>{{ inscription.nombrePaiments }}</td>
                 <td>
-                    <a href="{{ path('app_inscriptions_show', {'id': inscription.id}) }}">show</a>
-                    <a href="{{ path('app_inscriptions_edit', {'id': inscription.id}) }}">edit</a>
+                    {% if inscription.dateInscription %}
+                        {{ inscription.dateInscription|date('d/m/Y') }}
+                    {% else %}
+                        <span style="color: #dc3545;">Non définie</span>
+                    {% endif %}
+                </td>
+                <td>
+                    <a href="{{ path('app_inscriptions_show', {'id': inscription.id}) }}">Consulter</a>
+                    
+                    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION') %}
+                        <a href="{{ path('app_inscriptions_edit', {'id': inscription.id}) }}">Modifier</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="6">Aucune inscription trouvée</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_inscriptions_new') }}">Create new</a>
+    {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_GESTION') %}
+        <a href="{{ path('app_inscriptions_new') }}">Créer une nouvelle inscription</a>
+    {% endif %}
 {% endblock %}
